# Copyright (C) 2006 Warner Dittman
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = no-dependencies dist-shar dist-zip
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
EXTRA_DIST = README AUTHORS COPYING *.pc* autoconf/*

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libzrtpcpp.pc
